deploy/kubernetes/components/grafana/arches-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arches-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      component: arches-grafana
  template:
    metadata:
      labels:
        component: arches-grafana
    spec:
      containers:
        - name: arches-grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          command:
            - sh
            - -euc
            - |
              mkdir -p /etc/grafana/provisioning/datasources
              cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
              apiVersion: 1
              datasources:
              - name: Loki
                type: loki
                access: proxy 
                orgId: 1
                url: http://arches-loki:3100
                basicAuth: false
                isDefault: true
                version: 1
                editable: false
              EOF
              /run.sh
