deploy/kubernetes/components/grafana/arches-loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: arches-loki
  name: arches-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      component: arches-loki
  strategy: {}
  template:
    metadata:
      labels:
        component: arches-loki
    spec:
      containers:
        - name: arches-loki
          image: grafana/loki:latest
          ports:
            - containerPort: 3100
          args:
            - -config.file=/etc/loki/local-config.yaml
      restartPolicy: Always
