deploy/kubernetes/components/grafana/arches-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-grafana
  name: arches-grafana
spec:
  ports:
    - name: "arches-grafana-port"
      port: 443
      targetPort: 3000
  selector:
    component: arches-grafana
