deploy/kubernetes/components/grafana/arches-loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-loki
  name: arches-loki
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    component: arches-loki
